tmp - reconcile script diffs with importer